--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ THEORETICAL/MIT.Introduction.to.Algorithms.3rd.Edition.Sep.2009.pdf
 apac2016A/offd.cpp
 empirerebel/official.cpp
 apac2016A/offc.cpp
+usefulalgos.cpp
+topcoder/srm283div1/a.cpp
